🐛 Fix: ipad scrren size layout broken

--- a/public/css/bootstrap-responsive.css
+++ b/public/css/bootstrap-responsive.css
@@ -134,7 +134,7 @@ s/*!
   .featured-heading .block{margin-bottom: 30px !important;}
   .featured-heading .block h1{font-size: 22px !important; line-height: 28px !important;}
   .featured-images{margin: 0 -20px !important; padding: 30px 20px !important; padding-bottom: 0 !important;}
-  .featured-images .grid li .user-info ul li {float: none !important;width: 5% !important;}  
+  .featured-images .grid li .user-info ul li {float: none !important;width: 5% !important;}
 
   .user-info{margin-bottom: 30px !important;}
    .featured-images .grid li img {display: inline-block !important;}
@@ -142,7 +142,7 @@ s/*!
   .site-footer{padding-bottom: 0 !important;}
   .footer-wrapper .block{margin-bottom: 30px !important;}
   .copy-rights{padding-top: 30px !important;}
-  
+
   .navbar{display: block !important;}
   .navbar ul{margin: 0 !important;}
   .nav-collapse .nav > li .site-name{display: none !important;}
@@ -175,7 +175,7 @@ s/*!
   .banner .carousel-control{font-size: 16px !important; right: 42% !important; top: 40% !important;
                              width: 36px !important; height: 36px !important; line-height: 37px !important;}
   .banner .carousel-control.left{left: 42% !important;}
-  
+
 
   .featured-blocks .modal{  margin: 0 auto !important; left: 0 !important; right: 0 !important;}
   .featured-blocks .modal.fade.in{top: 30% !important;}
@@ -566,7 +566,7 @@ display: none !important;
 
 @media (min-width: 768px) and (max-width: 979px) {
 
-  
+
   .row {
     margin-left: -20px;
     *zoom: 1;
@@ -1008,7 +1008,7 @@ display: none !important;
 }
 
 @media (max-width: 480px) {
-  
+
   .featured-blocks .modal {
 
 width:auto !important;
@@ -1241,7 +1241,7 @@ top: 10% !important;
     overflow: hidden;
   }
   .navbar .btn-navbar {
-    display: block;
+    display: none;
   }
   .navbar-static .navbar-inner {
     padding-right: 10px;
